2009-03-30  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac, library-combo.make: Fixed to automatically use
	-lobjc_gc for the GNU Objective-C runtime with garbage collection
	if no --with-objc-lib-flag=... is used in configure.
	* configure: Regenerated.

2009-03-30  Nicola Pero  <nicola.pero@meta-innovation.com>

	From a suggestion by Truls Becken <truls.becken@gmail.com>:
	* configure.ac (--with-objc-lib-flag): New option allowing to
	replace the default -lobjc flag with a custom one such as
	-l:libobjc.so.1, which can be used on some platforms to require
	linking a specific version of libobjc - a handy trick when you
	have more than one installed.
	* configure: Regenerated.
	* config.make.in (OBJC_LIB_FLAG): New variable.
	* library-combo.make: Use OBJC_LIB_FLAG instead of -lobjc.
	
2009-03-24  Nicola Pero  <nicola.pero@meta-innovation.com>

	Fixed compiling software that contains both C/ObjC and C++/ObjC++
	files: use CC to compile C and ObjC files even if CXX is used to
	link.  (Problem reported by Riccardo Mottola <multix@gmail.com>).
	* target.make: Replaced CC with LD everywhere it is used to link -
	so that we can change the program used to link (LD) without having
	to change the program used to compile C/ObjC code (CC).
	* Instance/rules.make (LD): If CC_OBJ_FILES or OBJCC_OBJ_FILES is
	not empty, set LD to be CXX, while leaving CC unchanged.
	
2009-03-19  Nicola Pero  <nicola.pero@meta-innovation.com>

	Print a user-friendly warning or notice message when there are no
	files to link.
	* messages.make (WARNING_EMPTY_LINKING, NOTICE_EMPTY_LINKING): New
	messages.
	* Instance/application.make: Print out the WARNING_EMPTY_LINKING
	message if we're linking but there are no files to link.
	* Instance/ctool.make: Same change.
	* Instance/framework.make: Same change.
	* Instance/gswapp.make: Same change.
	* Instance/gswbundle.make: Same change.
	* Instance/library.make: Same change.
	* Instance/objc.make: Same change.