@@ -91,12 +91,10 @@ OBJC_LIBS =
 #
 # Set the appropriate ObjC runtime library and other information
 #
+# PS: OBJC_LIB_FLAG is set by config.make.
 ifeq ($(OBJC_RUNTIME_LIB), gnu)
   OBJC_LDFLAGS =
   OBJC_LIB_DIR =
-  ifeq ($(OBJC_LIB_FLAG),)
-    OBJC_LIB_FLAG = -lobjc
-  endif
   OBJC_LIBS = $(OBJC_LIB_FLAG)
   RUNTIME_FLAG   = -fgnu-runtime
   RUNTIME_DEFINE = -DGNU_RUNTIME=1
@@ -105,9 +103,6 @@ endif
 ifeq ($(OBJC_RUNTIME_LIB), gnugc)
   OBJC_LDFLAGS = 
   OBJC_LIB_DIR =
-  ifeq ($(OBJC_LIB_FLAG),)
-    OBJC_LIB_FLAG = -lobjc_gc
-  endif
   OBJC_LIBS = $(OBJC_LIB_FLAG) -ldl -lgc
   RUNTIME_FLAG   = -fgnu-runtime
   RUNTIME_DEFINE = -DGNU_RUNTIME=1 -DGS_WITH_GC=1
@@ -120,9 +115,6 @@ ifeq ($(OBJC_RUNTIME_LIB), nx)
   RUNTIME_FLAG = -fnext-runtime
   RUNTIME_DEFINE = -DNeXT_RUNTIME=1
   ifeq ($(FOUNDATION_LIB), gnu)
-    ifeq ($(OBJC_LIB_FLAG),)
-      OBJC_LIB_FLAG = -lobjc
-    endif
     OBJC_LIBS = $(OBJC_LIB_FLAG)
   endif
 endif
@@ -135,9 +127,6 @@ ifeq ($(OBJC_RUNTIME_LIB), apple)
   RUNTIME_FLAG = -fnext-runtime
   RUNTIME_DEFINE = -DNeXT_RUNTIME=1
   ifeq ($(FOUNDATION_LIB), gnu)
-    ifeq ($(OBJC_LIB_FLAG),)
-      OBJC_LIB_FLAG = -lobjc
-    endif
     OBJC_LIBS = $(OBJC_LIB_FLAG)
   endif
 endif
